# ElfLoader

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  test.cpp  test_jni_bad.cpp  test_jni_err.cpp  test_lib.cpp  test_nojni.cpp
app/src/main/java/io/github/eirv/elfloader/: HiddenApi.java  MainActivity.java
elfloader/: build.gradle
elfloader/src/main/java/io/github/eirv/elfloader/: ElfImg.java  ElfLoader.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
stub/: build.gradle
stub/apibridge/: build.gradle
stub/apibridge/src/main/java/io/github/eirv/elfloader/: ApiBridge.java
stub/src/main/java/dalvik/system/: VMRuntime.java
stub/src/main/java/sun/misc/: Unsafe.java
